# tic-tac-toe

./: .gitignore  .gitmodules
cpp/: .clang-format  .clangd  CMakeLists.txt  TODO.md  imgui.ini
cpp/.nvim/: .nvim_timer_data.json
cpp/resources/: config.json
cpp/resources/shaders/: flat_argb.frag  piece.frag  piece.vs  text_2d.vs
cpp/src/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  main.cpp  mouse_handler.cpp  mouse_handler.h  player.cpp  player.h  player_manager.cpp  player_manager.h  tile.cpp  tile.h
cpp/src/engine/: CMakeLists.txt
cpp/src/engine/.nvim/: .nvim_timer_data.json
cpp/src/engine/core/: primitives.h  resource_manager.cpp  resource_manager.h
cpp/src/engine/core/primitives/: line.cpp  line.h  rect.cpp  rect.h
cpp/src/engine/core/resources/: shader.cpp  shader.h  sprite.h  texture.h
cpp/src/engine/gui/: gui_item.h  gui_system.h
cpp/src/engine/gui/text/: text_renderer.cpp  text_renderer.h
cpp/src/engine/gui/widgets/: button.cpp  button.h  column.cpp  column.h  dropdown.cpp  dropdown.h  menu.cpp  menu.h  row.cpp  row.h  text_field.cpp  text_field.h
cpp/src/include/imgui/: imconfig.h  imgui_demo.cpp
cpp/src/include/utils/: resource_manager.cpp  resource_manager.h  shader.h  sprite.h  texture.cpp  texture.h
cpp/src/utils/: alignment.h  button.cpp  button.h  dropdown.cpp  dropdown.h  gui_item.cpp  gui_item.h  gui_system.cpp  gui_system.h  line.cpp  line.h  menu.cpp  menu.h  primitives.h  rect.cpp  rect.h  resource_manager.h  shader.h  sprite.cpp  sprite.h  text_field.cpp  text_field.h  text_renderer.cpp  text_renderer.h  texture.h
kotlin/: TODO.md  settings.gradle.kts
kotlin/.nvim/: .nvim_timer_data.json
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/org/example/: App.kt
python-ai/: TODO.md  ai.py  pyproject.toml
python-ai/.nvim/: .nvim_timer_data.json
